fixed too large clickable region and enabled props threading except for event picture

--- a/tlparty/src/components/EventPreview.css
+++ b/tlparty/src/components/EventPreview.css
@@ -4,7 +4,7 @@
 }
 
 .event-pic {
-    width: 100%;
+    width: 300px;
     border-radius: 30px;
 }
 
